--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://admin:tDEudv6xNEwlSiMB@deliverycluster.11atfup.mongodb.net/?retryWrites=true&w=majority&appName=DeliveryCluster
+MONGO_URI=url dine
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 KAFKA_BROKER=localhost:9092
 NODE_ENV=development
